# cv_pipeline-1

./: CMakeLists.txt  README.md  link_cuda  package.xml  requirements.txt
api_connect/: api_connect.ipynb  realsense_sensor.py  tesp.py
cfg/sensors/: D435_high_accuracy.json  realsense_config.json  realsense_config_D415.json  realsense_config_D435.json
dexnet/: maskNet.py
nodes/: gqcnn_service.py
srv/: fcgqcnnpj.srv  gqcnnpj.srv  gqcnnsuction.srv  maskrcnn.srv
webserver/: server.py
